--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
   "name": "cline-support-server",
   "version": "1.0.0",
-  "type": "module",
   "main": "build/index.js",
   "scripts": {
     "build": "tsc && node -e \"require('fs').chmodSync('build/index.js', '755')\"",
     "start": "node build/index.js",
+    "start:rest": "cross-env SERVER_MODE=rest node build/index.js",
     "dev": "npm run build && npm start",
+    "dev:rest": "npm run build && npm run start:rest",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["mcp", "cline", "design", "features"],
+  "keywords": ["mcp", "cline", "design", "features", "rest", "api"],
   "author": "",
   "license": "ISC",
-  "description": "MCP server for managing project features and ubiquitous language definitions",
+  "description": "MCP server for managing project features and ubiquitous language definitions, with REST API support",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.12.1"
+    "@modelcontextprotocol/sdk": "^1.12.1",
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@types/node": "^22.15.29",
+    "@types/express": "^4.17.17",
+    "@types/cors": "^2.8.13",
+    "cross-env": "^7.0.3",
     "typescript": "^5.8.3"
   }
 }
