--- a/package.json
+++ b/package.json
@@ -9,22 +9,34 @@
     "start:rest": "cross-env SERVER_MODE=rest node build/index.js",
     "dev": "npm run build && npm start",
     "dev:rest": "npm run build && npm run start:rest",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
-  "keywords": ["mcp", "cline", "design", "features", "rest", "api"],
+  "keywords": [
+    "mcp",
+    "cline",
+    "design",
+    "features",
+    "rest",
+    "api"
+  ],
   "author": "",
   "license": "ISC",
   "description": "MCP server for managing project features and ubiquitous language definitions, with REST API support",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.12.1",
-    "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
   },
   "devDependencies": {
-    "@types/node": "^22.15.29",
-    "@types/express": "^4.17.17",
     "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.15.29",
     "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.4",
     "typescript": "^5.8.3"
   }
 }
